fixed text wrapping

--- a/rooklift/styles/styles.css
+++ b/rooklift/styles/styles.css
@@ -214,6 +214,7 @@ main{
     grid-row: 1/2;
     margin: 20px 20px;
     color: black;
+    text-wrap: nowrap;
 }
 .navlinks-coaching a:nth-of-type(3){
     grid-column: 4/5;
